decide final spatial resolution

--- a/data_prep/grid_extend.ipynb
+++ b/data_prep/grid_extend.ipynb
@@ -177,6 +177,13 @@
    "source": [
     "Grid resolution: 0.25 * 0.25."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**If we are going to consider air quality, then use the 0.25 * 0.3125 grid resolution eventually.**"
+   ]
   }
  ],
  "metadata": {
